--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "d3-scale": "^2.2.2",
     "es6-promise": "^4.2.6",
     "leaflet": "^1.4.0",
     "vue": "^2.6.6",
